# Storage_tiering_system

./: .clang-format  .env.example  .gitignore  .mcp.json  CMakeLists.txt  Makefile  README.md  opencode.json  run.bat  start.bat  storage_tiering.db.bak  users.json
.github/workflows/: ci.yml
client/: main.js  package-lock.json  package.json  preload.js
client/src/: index.html  renderer.js  styles.css
config/: policy_rules.yaml
include/: config.hpp  dashboard.hpp  logger.hpp
include/api/: auth.hpp  fileserver.hpp  rest_server.hpp  s3_server.hpp  s3_types.hpp  supabase_client.hpp
include/catalog/: catalog_interface.hpp  persistent_catalog.hpp
include/core/: file_record.hpp  tier.hpp  types.hpp
include/migration/: local_migrator.hpp  migration_engine.hpp  migration_planner.hpp  migrator_interface.hpp  smb_migrator.hpp
include/monitoring/: access_tracker.hpp  drive_detector.hpp  file_watcher.hpp
include/policy/: composite_scorer.hpp  frequency_scorer.hpp  lifecycle_rule.hpp  policy_engine.hpp  recency_scorer.hpp  scorer.hpp  size_scorer.hpp  type_scorer.hpp
include/scanner/: real_scanner.hpp
include/tiering/: extent.hpp  heat_map.hpp  hysteresis.hpp  io_profiler.hpp  iops_monitor.hpp  nvram_cache.hpp  relocation.hpp  wear_leveler.hpp
scripts/: install_daemon.sh  install_service.ps1
src/: config.cpp  dashboard.cpp  logger.cpp  main.cpp
src/api/: auth.cpp  dashboard.html  fileserver.cpp  fileserver.html  rest_server.cpp  s3_server.cpp  supabase_client.cpp
src/catalog/: persistent_catalog.cpp
src/migration/: local_migrator.cpp  migration_engine.cpp  migration_planner.cpp  smb_migrator.cpp
src/monitoring/: access_tracker.cpp  drive_detector.cpp  file_watcher.cpp
src/policy/: composite_scorer.cpp  frequency_scorer.cpp  lifecycle_rule.cpp  policy_engine.cpp  recency_scorer.cpp  size_scorer.cpp  type_scorer.cpp
src/scanner/: real_scanner.cpp
src/tiering/: heat_map.cpp  hysteresis.cpp  io_profiler.cpp  iops_monitor.cpp  nvram_cache.cpp  relocation.cpp  wear_leveler.cpp
supabase/: schema.sql
tests/: test_catalog.cpp  test_main.cpp  test_migration.cpp  test_policy.cpp
